# Semaforo-Inteligente-Con-Perceptron

./: LICENSE  README.md
EntrenamientoCaracterísticasdeImagenBinaria/: BinarizeImg.m  FeatureExtraction1imageonly.m  entrenamientomatlab.m  predperceptronmatlab.m
EntrenamientoImagenBinaria/: ArduinoCamara.m  CMakeLists.txt  ContrastFunctions.m
neurona/: ArduinoCamara.m  BinarizaciónMatCaracteristicas.m  BinarizeImg.m  ContrastFunctions.m  csvfile.h  main.cpp
